fixed image spacing

--- a/styles/prosilver/theme/forumlegend.css
+++ b/styles/prosilver/theme/forumlegend.css
@@ -32,3 +32,7 @@
 .howwide2 {
 	width: auto;
 }
+
+.clear-legend .imageset {
+	margin-bottom: 3px;
+}
